# satr

./: .gitignore  Cargo.toml  Makefile  README.md
src/: bill.rs  bill_extractor.rs  cli.rs  macros.rs  main.rs  reporter.rs  reporter_factory.rs  tests.rs  xml_extractor.rs
src/cli/: list.rs  report.rs
