[package]
name = "satr"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
xml = "0.8.20"
clap = { version = "4.5.4", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
zip = "2.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
enum-kinds = "0.5.1"
walkdir = "2.5.0"
Lotus = "0.2.1"

[dev-dependencies]
serde_json = "1.0"
